<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/spring_calculator"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/result_panel"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.6"
        tools:layout_editor_absoluteX="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/material"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/material_input"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_type"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/end_type_input"
            android:layout_width="match_parent"
            android:layout_height="35dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wire_diameter"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/wire_diameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/unit_mm"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/outer_diameter"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/outer_diameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/unit_mm"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/free_length"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/free_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/unit_mm"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/solid_length"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/solid_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/unit_mm"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/calc_button"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="pitch"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pitch_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="number of total coils"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/total_coil_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="number of active coils"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/active_coil_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="spring rate"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/spring_rate_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="force to solid length"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/force_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="FoS for static yielding"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/FoS_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calc_button_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/result_panel"
        android:orientation="horizontal">


    </LinearLayout>

    <Button
        android:id="@+id/calc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="Calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/result_panel" />
</androidx.constraintlayout.widget.ConstraintLayout>